added style.css and some content to index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link href="styles/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-
+<h1>KinoXP</h1>
+<h2>The couch potatoes</h2>
+<p>Our first group project on 3. semester</p>
 </body>
 </html>
